Better IDs and images.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 </ul>
             </nav>
 
-            <img class="headshot" src="http://placehold.it/150x150"
+            <img class="headshot" src="http://unsplash.it/150/150"
                 alt="J. Random Hacker headshot">
 
-            <p class="about">
-                <a id="about">Hi</a>, I'm J. Random Hacker, a full-stack web developer from Nowheresville, USA.  I use React and Node.js to build web apps which leave you with a minty fresh taste in your mouth.  Outside of coding I enjoy watching <a href="https://www.youtube.com/watch?v=6SFNW5F8K9Y">this video</a> on repeat.
+            <p class="about" id="about">
+                Hi, I'm J. Random Hacker, a full-stack web developer from Nowheresville, USA.  I use React and Node.js to build web apps which leave you with a minty fresh taste in your mouth.  Outside of coding I enjoy watching <a href="https://www.youtube.com/watch?v=6SFNW5F8K9Y">this video</a> on repeat.
             </p>
             <nav class="contact-links">
                 <ul>
@@ -30,11 +30,11 @@
                 </ul>
             </nav>
         </header>
-        <section class="work">
-            <h2><a id="work">My work</a></h2>
+        <section class="work" id="work">
+            <h2>My work</h2>
             <section class="project">
                 <h3>Frobnicator</h3>
-                <img class="project-image" src="http://placehold.it/350x150"
+                <img class="project-image" src="http://unsplash.it/350/150?random&bust=1"
                     alt="Frobnicator screenshot">
                 <p class="project-description">
                     A frob which allows you to frobnicate other frobs.
@@ -63,7 +63,7 @@
             </section>
             <section class="project">
                 <h3>FooBar</h3>
-                <img class="project-image" src="http://placehold.it/350x150"
+                <img class="project-image" src="http://unsplash.it/350/150?random&bust=2"
                     alt="FooBar screenshot">
                 <p class="project-description">
                     A foo which allows you to bar other bazes.
@@ -92,7 +92,7 @@
             </section>
             <section class="project">
                 <h3>AliceBob</h3>
-                <img class="project-image" src="http://placehold.it/350x150"
+                <img class="project-image" src="http://unsplash.it/350/150?random&bust=3"
                     alt="AliceBob screenshot">
                 <p class="project-description">
                     An Alice which allows you to Bob other Eves.
@@ -121,7 +121,7 @@
             </section>
             <section class="project">
                 <h3>Wibble</h3>
-                <img class="project-image" src="http://placehold.it/350x150"
+                <img class="project-image" src="http://unsplash.it/350/150?random&bust=4"
                     alt="Wibble screenshot">
                 <p class="project-description">
                     A wibble which allows you to wobble other wubbles.
@@ -149,8 +149,8 @@
                 </nav>
             </section>
         </section>
-        <section class="contact">
-            <h2><a id="contact">Contact me</a></h2>
+        <section class="contact" id="contact">
+            <h2>Contact me</h2>
             <form action="https://formspree.io/jrandomhacker@example.com"
                   method="POST">
                 <label for="contact-form-name">Your Name</label>
