--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h2>My work</h2>
             <section class="project">
                 <h3>Frobnicator</h3>
-                <img class="project-image" src="http://unsplash.it/350/150?random&bust=1"
+                <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=1"
                     alt="Frobnicator screenshot">
                 <p class="project-description">
                     A frob which allows you to frobnicate other frobs.
@@ -63,7 +63,7 @@
             </section>
             <section class="project">
                 <h3>FooBar</h3>
-                <img class="project-image" src="http://unsplash.it/350/150?random&bust=2"
+                <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=2"
                     alt="FooBar screenshot">
                 <p class="project-description">
                     A foo which allows you to bar other bazes.
@@ -92,7 +92,7 @@
             </section>
             <section class="project">
                 <h3>AliceBob</h3>
-                <img class="project-image" src="http://unsplash.it/350/150?random&bust=3"
+                <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=3"
                     alt="AliceBob screenshot">
                 <p class="project-description">
                     An Alice which allows you to Bob other Eves.
@@ -121,7 +121,7 @@
             </section>
             <section class="project">
                 <h3>Wibble</h3>
-                <img class="project-image" src="http://unsplash.it/350/150?random&bust=4"
+                <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=4"
                     alt="Wibble screenshot">
                 <p class="project-description">
                     A wibble which allows you to wobble other wubbles.
